feat: really fixed rpi tearing problem :)

--- a/infotainment/asl-gokart-dashboard/package.json
+++ b/infotainment/asl-gokart-dashboard/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "buildrpi": "tauri build --target aarch64-unknown-linux-gnu"
   },
   "dependencies": {
     "@fontsource/poppins": "^5.0.8",
@@ -20,6 +21,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@tauri-apps/api": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.336.0",
