feat: ongoing throttle zone controller
Co-authored-by: Leonard L <LeoLTM@users.noreply.github.com>
Co-authored-by: iaxon <iaxon@users.noreply.github.com>

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -46,7 +46,10 @@
         "rust-analyzer.checkOnSave.allTargets": false,
         "[rust]": {
           "editor.defaultFormatter": "rust-lang.rust-analyzer"
-        }
+        },
+        "rust-analyzer.linkedProjects": [
+            "/home/dev/asl-gokart/zc/zc_throttle/Cargo.toml"
+        ]
       },
       "extensions": [
         "rust-lang.rust-analyzer",
