--- a/infotainment/asl-gokart-dashboard/package.json
+++ b/infotainment/asl-gokart-dashboard/package.json
@@ -24,6 +24,7 @@
     "@tauri-apps/api": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.336.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
