--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -49,7 +49,8 @@
         "postcss": "^8.4.41",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
-        "storybook": "^8.2.8",        "tailwindcss": "^3.4.9",
+        "storybook": "^8.2.8",
+        "tailwindcss": "^3.4.9",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4",
         "vite": "^5.4.0"
@@ -64,6 +65,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@types/ws": "^8.5.12",
         "@vitejs/plugin-react": "^4.3.1",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
@@ -81,6 +83,7 @@
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.1",
         "tailwindcss-animate": "^1.0.7",
+        "ws": "^8.18.0",
         "zod": "^3.23.8",
         "zustand": "^4.5.5"
     }
