--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -15,7 +15,8 @@
         "test:watch": "jest --watch",
         "test:unit": "jest",
         "test:e2e": "playwright test",
-        "test:all": "jest && playwright test"
+        "test:all": "jest && playwright test",
+        "clean": "rimraf .vite dist out"
     },
     "author": "AEROSPACE LAB Herrenber e.V. Team GoKart",
     "license": "MIT",
@@ -49,6 +50,7 @@
         "postcss": "^8.4.41",
         "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.6",
+        "rimraf": "^6.0.1",
         "storybook": "^8.2.8",
         "tailwindcss": "^3.4.9",
         "ts-node": "^10.9.2",
