--- a/zc/zc_battery/platformio.ini
+++ b/zc/zc_battery/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp32-poe-iso
 framework = arduino
 monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.8
 	milesburton/DallasTemperature@^3.11.0
