--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -83,6 +83,7 @@
         "react-i18next": "^15.0.1",
         "react-query": "^3.39.3",
         "react-router-dom": "^6.26.1",
+        "socket.io": "^4.7.5",
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.1",
         "tailwindcss-animate": "^1.0.7",
