--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -73,6 +73,7 @@
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "electron-squirrel-startup": "^1.0.1",
+        "faye-websocket": "^0.11.4",
         "i18next": "^23.12.2",
         "input-otp": "^1.2.4",
         "lucide-react": "^0.427.0",
