--- a/zc/zc_battery/platformio.ini
+++ b/zc/zc_battery/platformio.ini
@@ -14,6 +14,7 @@ board = esp32-poe-iso
 framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
+build_flags = -D DEBUG_ESP_PORT=Serial
 lib_deps = 
 	paulstoffregen/OneWire@^2.3.8
 	milesburton/DallasTemperature@^3.11.0
