--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -68,6 +68,7 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@tanstack/react-table": "^8.20.6",
         "@types/ws": "^8.5.12",
         "@vitejs/plugin-react": "^4.3.1",
         "class-variance-authority": "^0.7.0",
