--- a/analytics/.env.example
+++ b/analytics/.env.example
@@ -19,6 +19,10 @@ AUTH_SECRET=""
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
 
+# Next Auth GitHub Provider
+AUTH_GITHUB_ID=""
+AUTH_GITHUB_SECRET=""
+
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
