--- a/analytics/package.json
+++ b/analytics/package.json
@@ -37,6 +37,7 @@
     "@trpc/server": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "elysia": "^1.3.5",
     "lucide-react": "^0.513.0",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
