feat: integrate InfluxDB client for sensor data storage and retrieval
- Added @influxdata/influxdb3-client dependency to package.json
- Updated API route to save sensor data to both Prisma and InfluxDB
- Implemented GET endpoint to fetch sensor data from InfluxDB
- Enhanced error handling for data operations
- Added environment variables for InfluxDB configuration
- Created docker-compose file for InfluxDB setup

--- a/analytics/.env.example
+++ b/analytics/.env.example
@@ -26,3 +26,9 @@ AUTH_GITHUB_SECRET=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="file:./db.sqlite"
+
+# InfluxDB
+INFLUX_HOST="http://localhost:8181"
+# Generate a new token in the InfluxDB UI with the "Read/Write" permission for the database.
+INFLUX_TOKEN=""
+INFLUX_DATABASE="asl-gokart"
