--- a/analytics/docker-compose.yaml
+++ b/analytics/docker-compose.yaml
@@ -1,3 +1,4 @@
+name: asl-gokart/analytics
 services:
   influxdb3-core:
     container_name: influxdb3-core
@@ -10,3 +11,8 @@ services:
       - --node-id=node0
       - --object-store=file
       - --data-dir=/var/lib/influxdb3
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    ports:
+      - 8182:3000
