restructured env variables

--- a/analytics/.env.example
+++ b/analytics/.env.example
@@ -28,7 +28,8 @@ AUTH_GITHUB_SECRET=""
 DATABASE_URL="file:./db.sqlite"
 
 # InfluxDB
-INFLUX_HOST="http://localhost:8181"
+INFLUX_HOST="http://localhost"
+INFLUX_PORT="8181"
 # Generate a new token in the InfluxDB UI with the "Read/Write" permission for the database.
 INFLUX_TOKEN=""
 INFLUX_DATABASE="asl-gokart"
