fixed folder permission errors (influx); added persistent storage volume for influx; added provisioning volume for grafana; added env variable forwards for grafana;

--- a/analytics/docker-compose.yaml
+++ b/analytics/docker-compose.yaml
@@ -3,8 +3,11 @@ services:
   influxdb3-core:
     container_name: influxdb3-core
     image: influxdb:3-core
+    user: root
     ports:
-      - 8181:8181
+      - ${INFLUX_PORT}:8181
+    volumes:
+      - ./influxdb3_data:/var/lib/influxdb3:z
     command:
       - influxdb3
       - serve
@@ -16,3 +19,13 @@ services:
     image: grafana/grafana
     ports:
       - 8182:3000
+    volumes:
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - INFLUX_HOST=${INFLUX_HOST}
+      - INFLUX_PORT=${INFLUX_PORT}
+      - INFLUX_DATABASE=${INFLUX_DATABASE}
+      - INFLUX_TOKEN=${INFLUX_TOKEN}
+    depends_on:
+      - influxdb3-core
