--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -59,6 +59,7 @@
         "vite": "^5.4.0"
     },
     "dependencies": {
+        "@asl-gokart/someip-node": "file:../someip-node",
         "@mars3d/heatmap.js": "^2.0.7",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-label": "^2.1.0",
