--- a/infotainment/someip-node/package.json
+++ b/infotainment/someip-node/package.json
@@ -46,13 +46,15 @@
     "node": ">= 10"
   },
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
+    "registry": "https://registry.leotm.de/",
     "access": "public"
   },
   "scripts": {
     "artifacts": "napi artifacts",
     "bench": "node --import @oxc-node/core/register benchmark/bench.ts",
     "build": "napi build --platform --release",
+    "build:pi4": "napi build --release --platform --use-napi-cross",
+    "build:cargocp": "cargo-cp-artifact -nc index.node -- cargo build --release --message-format=json-render-diagnostics",
     "build:debug": "napi build --platform",
     "format": "run-p format:prettier format:rs format:toml",
     "format:prettier": "prettier . -w",
@@ -73,6 +75,7 @@
     "@tybys/wasm-util": "^0.10.0",
     "@types/node": "^24.3.0",
     "ava": "^6.4.1",
+    "cargo-cp-artifact": "^0.1.9",
     "chalk": "^5.4.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
