--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,33 +30,33 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: yarn
-          cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/yarn.lock
-      - name: Install
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          components: clippy, rustfmt
-      - name: Install dependencies
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: yarn install
-      - name: Oxlint
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: yarn lint
-      - name: Cargo fmt
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: cargo fmt -- --check
-      - name: Clippy
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: cargo clippy
+  # lint:
+  #   name: Lint
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #     - name: Setup node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 22
+  #         cache: yarn
+  #         cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/yarn.lock
+  #     - name: Install
+  #       uses: dtolnay/rust-toolchain@stable
+  #       with:
+  #         components: clippy, rustfmt
+  #     - name: Install dependencies
+  #       working-directory: ${{ env.WORKING_DIRECTORY }}
+  #       run: yarn install
+  #     - name: Oxlint
+  #       working-directory: ${{ env.WORKING_DIRECTORY }}
+  #       run: yarn lint
+  #     - name: Cargo fmt
+  #       working-directory: ${{ env.WORKING_DIRECTORY }}
+  #       run: cargo fmt -- --check
+  #     - name: Clippy
+  #       working-directory: ${{ env.WORKING_DIRECTORY }}
+  #       run: cargo clippy
   build:
     strategy:
       fail-fast: false
@@ -204,7 +204,7 @@ jobs:
       contents: write
       id-token: write
     needs:
-      - lint
+#      - lint
       - test-linux-binding
     steps:
       - uses: actions/checkout@v5
