--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -131,87 +131,87 @@ jobs:
             ${{ env.WORKING_DIRECTORY }}/${{ env.APP_NAME }}.*.node
             ${{ env.WORKING_DIRECTORY }}/${{ env.APP_NAME }}.*.wasm
           if-no-files-found: error
-  test-linux-binding:
-    name: Test ${{ matrix.target }} - node@${{ matrix.node }}
-    needs:
-      - build
-    strategy:
-      fail-fast: false
-      matrix:
-        target:
-          - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
-          - aarch64-unknown-linux-gnu
-          - aarch64-unknown-linux-musl
-          - armv7-unknown-linux-gnueabihf
-        node:
-          - '20'
-          - '22'
-    runs-on: ${{ contains(matrix.target, 'aarch64') && 'ubuntu-24.04-arm' || 'ubuntu-latest' }}
-    steps:
-      - uses: actions/checkout@v5
-      - name: Setup node
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node }}
-          cache: yarn
-          cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/yarn.lock
-      - name: Output docker params
-        id: docker
-        run: |
-          node -e "
-            if ('${{ matrix.target }}'.startsWith('aarch64')) {
-              console.log('PLATFORM=linux/arm64')
-            } else if ('${{ matrix.target }}'.startsWith('armv7')) {
-              console.log('PLATFORM=linux/arm/v7')
-            } else {
-              console.log('PLATFORM=linux/amd64')
-            }
-          " >> $GITHUB_OUTPUT
-          node -e "
-            if ('${{ matrix.target }}'.endsWith('-musl')) {
-              console.log('IMAGE=node:${{ matrix.node }}-alpine')
-            } else {
-              console.log('IMAGE=node:${{ matrix.node }}-slim')
-            }
-          " >> $GITHUB_OUTPUT
-      - name: Install dependencies
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: |
-          yarn config set --json supportedArchitectures.cpu '["current", "arm64", "x64", "arm"]'
-          yarn config set --json supportedArchitectures.libc '["current", "musl", "gnu"]'
-          yarn install
-      - name: Download artifacts
-        uses: actions/download-artifact@v5
-        with:
-          name: bindings-${{ matrix.target }}
-          path: ${{ env.WORKING_DIRECTORY }}
-      - name: List packages
-        working-directory: ${{ env.WORKING_DIRECTORY }}
-        run: ls -R .
-        shell: bash
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-        if: ${{ contains(matrix.target, 'armv7') }}
-        with:
-          platforms: all
-      - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-        if: ${{ contains(matrix.target, 'armv7') }}
-      - name: Test bindings
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ${{ steps.docker.outputs.IMAGE }}
-          options: '-v ${{ github.workspace }}:${{ github.workspace }} -w ${{ github.workspace }}/${{ env.WORKING_DIRECTORY }} --platform ${{ steps.docker.outputs.PLATFORM }}'
-          run: yarn test
+  # test-linux-binding:
+  #   name: Test ${{ matrix.target }} - node@${{ matrix.node }}
+  #   needs:
+  #     - build
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       target:
+  #         - x86_64-unknown-linux-gnu
+  #         - x86_64-unknown-linux-musl
+  #         - aarch64-unknown-linux-gnu
+  #         - aarch64-unknown-linux-musl
+  #         - armv7-unknown-linux-gnueabihf
+  #       node:
+  #         - '20'
+  #         - '22'
+  #   runs-on: ${{ contains(matrix.target, 'aarch64') && 'ubuntu-24.04-arm' || 'ubuntu-latest' }}
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #     - name: Setup node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: ${{ matrix.node }}
+  #         cache: yarn
+  #         cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/yarn.lock
+  #     - name: Output docker params
+  #       id: docker
+  #       run: |
+  #         node -e "
+  #           if ('${{ matrix.target }}'.startsWith('aarch64')) {
+  #             console.log('PLATFORM=linux/arm64')
+  #           } else if ('${{ matrix.target }}'.startsWith('armv7')) {
+  #             console.log('PLATFORM=linux/arm/v7')
+  #           } else {
+  #             console.log('PLATFORM=linux/amd64')
+  #           }
+  #         " >> $GITHUB_OUTPUT
+  #         node -e "
+  #           if ('${{ matrix.target }}'.endsWith('-musl')) {
+  #             console.log('IMAGE=node:${{ matrix.node }}-alpine')
+  #           } else {
+  #             console.log('IMAGE=node:${{ matrix.node }}-slim')
+  #           }
+  #         " >> $GITHUB_OUTPUT
+  #     - name: Install dependencies
+  #       working-directory: ${{ env.WORKING_DIRECTORY }}
+  #       run: |
+  #         yarn config set --json supportedArchitectures.cpu '["current", "arm64", "x64", "arm"]'
+  #         yarn config set --json supportedArchitectures.libc '["current", "musl", "gnu"]'
+  #         yarn install
+  #     - name: Download artifacts
+  #       uses: actions/download-artifact@v5
+  #       with:
+  #         name: bindings-${{ matrix.target }}
+  #         path: ${{ env.WORKING_DIRECTORY }}
+  #     - name: List packages
+  #       working-directory: ${{ env.WORKING_DIRECTORY }}
+  #       run: ls -R .
+  #       shell: bash
+  #     - name: Set up QEMU
+  #       uses: docker/setup-qemu-action@v3
+  #       if: ${{ contains(matrix.target, 'armv7') }}
+  #       with:
+  #         platforms: all
+  #     - run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+  #       if: ${{ contains(matrix.target, 'armv7') }}
+  #     - name: Test bindings
+  #       uses: addnab/docker-run-action@v3
+  #       with:
+  #         image: ${{ steps.docker.outputs.IMAGE }}
+  #         options: '-v ${{ github.workspace }}:${{ github.workspace }} -w ${{ github.workspace }}/${{ env.WORKING_DIRECTORY }} --platform ${{ steps.docker.outputs.PLATFORM }}'
+  #         run: yarn test
   publish:
-    name: Publish
+    name: Publish to Artifacts
     runs-on: ubuntu-latest
     permissions:
       contents: write
       id-token: write
-    needs:
+#    needs:
 #      - lint
-      - test-linux-binding
+#      - test-linux-binding
     steps:
       - uses: actions/checkout@v5
       - name: Setup node
