added "build" job to "publish" jobs requirement

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -209,7 +209,8 @@ jobs:
     permissions:
       contents: write
       id-token: write
-#    needs:
+    needs:
+      - build
 #      - lint
 #      - test-linux-binding
     steps:
