--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -247,4 +247,4 @@ jobs:
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
+          NPM_TOKEN: ${{ env.NPM_REGISTRY_AUTH_TOKEN }}
