--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -243,8 +243,8 @@ jobs:
         run: |
           npm config set provenance false
           echo "//$REGISTRY_URL/:_authToken=$NPM_REGISTRY_AUTH_TOKEN" >> ~/.npmrc
-          cat ~/.npmrc
-          npm publish --access public
+          export NPM_REGISTRY_AUTH_TOKEN=${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
+          yarn npm publish --access public
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
