--- a/infotainment/someip-node/.yarnrc.yml
+++ b/infotainment/someip-node/.yarnrc.yml
@@ -2,7 +2,15 @@ nodeLinker: node-modules
 
 npmAuditRegistry: "https://registry.npmjs.org"
 npmPublishRegistry: "https://registry.leotm.de/"
-npmAuthToken: "${NPM_REGISTRY_AUTH_TOKEN}"
+
+npmScopes: {
+  "@asl-gokart": {
+  npmPublishRegistry: "https://registry.leotm.de/",
+  npmRegistryServer: "https://registry.leotm.de/",
+  npmAlwaysAuth: true,
+  npmAuthToken: "${NPM_REGISTRY_AUTH_TOKEN}",
+  },
+}
 
 yarnPath: .yarn/releases/yarn-4.9.4.cjs
 
