--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -241,6 +241,7 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           npm config set provenance false
+          echo "//$REGISTRY_URL/:_authToken=$NPM_REGISTRY_AUTH_TOKEN" >> ~/.npmrc
           export NPM_REGISTRY_AUTH_TOKEN=${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
           yarn npm publish
 
