--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -241,9 +241,9 @@ jobs:
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           npm config set provenance false
-          echo "//$REGISTRY_URL/:_authToken=$NPM_REGISTRY_AUTH_TOKEN" >> ~/.npmrc
           export NPM_REGISTRY_AUTH_TOKEN=${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
           yarn npm publish
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_REGISTRY_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
