added higher level npmAuthToken entry

--- a/infotainment/someip-node/.yarnrc.yml
+++ b/infotainment/someip-node/.yarnrc.yml
@@ -2,6 +2,7 @@ nodeLinker: node-modules
 
 npmAuditRegistry: "https://registry.npmjs.org"
 npmPublishRegistry: "https://registry.leotm.de/"
+npmAuthToken: "${NPM_REGISTRY_AUTH_TOKEN}"
 
 npmScopes: {
   "@asl-gokart": {
