--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -205,6 +205,7 @@ jobs:
   publish:
     name: Publish to Artifacts
     runs-on: ubuntu-latest
+    if: github.event_name == 'push'
     permissions:
       contents: write
       id-token: write
@@ -246,4 +247,3 @@ jobs:
 
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_REGISTRY_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
