changed registry url from internal ip to external url

--- a/infotainment/headunit/.npmrc
+++ b/infotainment/headunit/.npmrc
@@ -1,2 +1,2 @@
 registry=https://registry.npmjs.org/
-@asl-gokart:registry=http://192.168.2.11:4873/
+@asl-gokart:registry=https://registry.leotm.de/
