updated publish / release instructions and added package description

--- a/infotainment/someip-node/package.json
+++ b/infotainment/someip-node/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@asl-gokart/someip-node",
   "version": "1.0.1",
-  "description": "SOMEIP protocol implementation for Node.js using NAPI-RS",
+  "description": "This package works as a TypeScript Node.js wrapper around esp32-protocol, a simpler implementation of the SOME-IP ethernet communication protocol.",
   "main": "index.js",
   "types": "index.d.ts",
   "repository": {
