--- a/infotainment/someip-node/Cargo.toml
+++ b/infotainment/someip-node/Cargo.toml
@@ -3,6 +3,7 @@
 authors = ["AEROSPACE-LAB Team Gokart"]
 edition = "2021"
 name = "someip_node"
+description="This package works as a TypeScript wrapper around esp32-protocol, a simpler implementation of the SOME-IP ethernet communication protocol."
 version = "1.0.1"
 
 [lib]
