--- a/.github/workflows/ci_headunit.yml
+++ b/.github/workflows/ci_headunit.yml
@@ -24,7 +24,7 @@ jobs:
               with:
                 node-version: 22
                 cache: 'npm'
-                cache-dependency-path: headunit/package-lock.json
+                cache-dependency-path: ${{ env.WORKING_DIRECTORY }}/package-lock.json
             - name: Install dependencies
               working-directory: ${{ env.WORKING_DIRECTORY }}
               run: npm install
