feat: implemented base version of motor page with threejs particle animations and debug UI inputs to change flowState manually;

--- a/infotainment/headunit/tsconfig.json
+++ b/infotainment/headunit/tsconfig.json
@@ -16,7 +16,8 @@
         },
         "outDir": "dist",
         "moduleResolution": "node",
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "types": ["vite/client"],
     },
     "include": ["src"]
 }
