--- a/infotainment/headunit/package.json
+++ b/infotainment/headunit/package.json
@@ -43,6 +43,7 @@
         "@types/node": "^22.2.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
+        "@types/three": "^0.181.0",
         "autoprefixer": "^10.4.20",
         "electron": "^31.3.1",
         "electron-playwright-helpers": "^1.7.1",
@@ -69,6 +70,10 @@
         "@radix-ui/react-slot": "^1.0.2",
         "@radix-ui/react-switch": "^1.1.0",
         "@radix-ui/react-tabs": "^1.1.0",
+        "@radix-ui/react-toggle": "^1.1.10",
+        "@radix-ui/react-toggle-group": "^1.1.11",
+        "@react-three/drei": "^9.117.3",
+        "@react-three/fiber": "^8.17.10",
         "@tanstack/react-table": "^8.20.6",
         "@types/ws": "^8.5.12",
         "@vitejs/plugin-react": "^4.3.1",
@@ -89,6 +94,7 @@
         "sonner": "^1.5.0",
         "tailwind-merge": "^2.5.1",
         "tailwindcss-animate": "^1.0.7",
+        "three": "^0.181.2",
         "ws": "^8.18.0",
         "zod": "^3.23.8",
         "zustand": "^4.5.5"
